apps/logo-quiz/src/app/views/LogoVerify/LogoVerify.scss
.logo-verify {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  &__wrapper {
    height: 90vh;
    background: #F4F7F3;
    border-radius: 10px 10px 0 0;
    padding: 40px 50px;
  }

  &__letters {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
  }

  &__image {
    width: auto;
    width: auto;
    height: 100%;
  }
  
  &__image-wrapper {
    border-radius: 20px;
    background: white;
    padding: 15px;
    height: 160px;
    margin: 0 auto;
    width: 160px;
    margin-bottom: 40px;
  }

  &__btn {
    background: #1d3557;
    border: none;
    height: 50px;
    width: 50px;
    color: white;
    text-transform: uppercase;
    font-weight: 600;
    font-size: 1.375em;
    border-radius: 3px;
    transition: opacity 0.25s ease;
    text-align: center;
    position: relative;

    &--delete {
      background: none;
    }

    &:disabled {
      opacity: 0.2;
    }
  }

  &__btn-text {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__guess {
    margin-bottom: 40px;
    min-height: 44px;
    flex-wrap: wrap;
    display: flex;
  }

  &__guess-btn {
    border-radius: 3px;
    background: none;
    border: none;
    font-size: 1.15em;
    min-width: 20px !important;
    max-width: 35px !important;
    position: relative;
    padding: 0 4px;
    color: #1D3557;
    text-transform: uppercase;
    font-weight: 700;
    height: 29px;
    margin-bottom: 15px;

    &:after {
      content: "";
      position: absolute;
      bottom: -7px;
      left: 3px;
      right: 3px;
      display: block;
      border-radius: 10px;
      background: #1d3557;
      height: 3px;
    }

    &--wrong {
      color: #f34141;

      &:after {
        background: #f34141;
      }
    }

  }

  &__btn-wrapper {
    width: 20%;
    margin-bottom: 20px;
  }
}

.lv-modal {
  &__button {
    font-size: 0.9em;
    padding: 10px 20px;
    display: block;
    height: auto;
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  &__content {
    text-align: center;
    min-width: 180px;

    p {
      font-weight: 600;
      margin-bottom: 25px;
      margin-top: 20px;
    }
  }

  &__back-icon {
    margin-right: 10px;
  }
}

.success {
  color: green;
}
.error {
  color: red;
}

